# AgenticReportWriter

./: .gitignore  README.md  pyproject.toml
docs/: architecture-plan.md  onyx_llm_poc_access.md  permissions_request_gsk_rd_ai_code_tool_exe.md  permissions_request_mvp_pcs_sys_eng.md
docs/csv/: FS.md  README.md  URS.md  change_control_sop.md  traceability_matrix.md
samples/: audit_dashboard.py  import_word_template.py  run_synthetic_ib.py
samples/synthetic_compound/: generate_corpus.py  metadata.json  seed_db.py
samples/synthetic_compound/queries/: ae_summary_by_soc_v3.yaml  (+4 more)
services/api_gateway/: main.py
services/api_integration/: __init__.py  connector.py  gate.py  mock_connector.py  registry.py
services/audit/: __init__.py  anchor.py  firestore_store.py  hash_chain.py  llm_audit.py  merkle.py  schema.py  signer.py  store.py
services/data_integration/: __init__.py  approval.py  executor.py  named_query.py  safety_gate.py  sql_safety.py
services/document_renderer/: __init__.py  dryrun.py  gdocs.py  renderer.py
services/generation_orchestrator/: critic.py  filler.py  orchestrator.py  planner.py  prompts.py  retrieval.py  types.py
services/parsing_service/: docx_parser.py  parser.py  pdf_parser.py  registry.py  xlsx_parser.py
services/template_service/: __init__.py  builder.py
shared/llm/: __init__.py  client.py  stub.py  vertex.py
shared/schemas/: __init__.py  canonical_document.py  citation.py  parsed_chunk.py  template.py
tests/: conftest.py  test_api_integration.py  test_audit_anchoring.py  test_audit_store.py  test_binding_resolver_with_safety_gate.py  test_clinical_trials_connector.py  test_data_integration.py  test_document_renderer.py  test_firestore_audit_store.py  test_from_scratch_adapter.py  test_library_adapter.py  test_llm_stub.py  test_local_file_connector.py  test_orchestrator_end_to_end.py  test_parsers.py  test_sample_reports_adapter.py  test_synthetic_corpus.py  test_template_builder.py  test_template_loading.py
(+21 files in other folders)
