[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "report-generator-agent"
version = "0.0.1"
description = "AI-powered research report generation for clinical/pharma/regulatory teams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Report Generator Agent Team" }]

dependencies = [
    "pydantic>=2.7,<3",
    # anthropic[vertex] — Claude on GSK corporate Vertex AI via workload
    # identity federation. NEVER use ANTHROPIC_API_KEY in this project;
    # auth is via ADC (gcloud auth application-default login locally,
    # workload identity in Cloud Run).
    "anthropic[vertex]>=0.40,<1",
    "google-auth>=2.30,<3",
    "jsonschema>=4.21,<5",
    "python-docx>=1.1,<2",
    "openpyxl>=3.1,<4",
    "pypdf>=4.2,<5",
    "tenacity>=8.2,<9",
    "structlog>=24.1,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-jsonschema",
    "reportlab>=4.2,<5",  # for generating PDF fixtures in parser tests
]
gcp = [
    "google-cloud-aiplatform>=1.50,<2",
    "google-cloud-storage>=2.16,<3",
    "google-cloud-firestore>=2.16,<3",
    "google-cloud-dlp>=3.18,<4",
    "google-cloud-documentai>=2.27,<3",
    "google-api-python-client>=2.130,<3",
    "google-auth>=2.30,<3",
]
poc = [
    "faiss-cpu>=1.8,<2",
    "sentence-transformers>=3.0,<4",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "services"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "S", "C4", "RET", "SIM"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
